src/ty/snapshots/tvm__ty__tests__array_push.snap
---
source: src/ty/tests.rs
expression: "check!(r#\"\n    let a = [];\n    (a[0] + 10);\n  \"#)"
---
fn __main__() {
  let a: [int] = [];
  ((a/*:[int]*/)[(0/*:int*/)]/*:int*/) + (10/*:int*/);
}
