src/ty/snapshots/tvm__ty__tests__binary_ops.snap
---
source: src/ty/tests.rs
expression: "check!(r#\"\n    1 + 1; 1.5 + 1.5; \"a\" + \"b\";\n    1 < 1; 1.5 < 1.5; \"a\" < \"b\";\n    1 > 1; 1.5 > 1.5; \"a\" > \"b\";\n    1 <= 1; 1.5 <= 1.5; \"a\" <= \"b\";\n    1 >= 1; 1.5 >= 1.5; \"a\" >= \"b\";\n    \n    1 + 1; 1.5 + 1.5;\n    1 - 1; 1.5 - 1.5;\n    1 * 1; 1.5 * 1.5;\n    1 / 1; 1.5 / 1.5;\n    1 % 1; 1.5 % 1.5;\n    1 ** 1; 1.5 ** 1.5;\n\n    true && true; false && false;\n    true || true; false || false;\n\n    1 == 1; 1.5 == 1.5; \"a\" == \"b\";\n    true == true; false == false;\n    [] == []; none == none;\n    \n    1 != 1; 1.5 != 1.5; \"a\" != \"b\";\n    true != true; false != false;\n    [] != []; none != none;\n  \"#)"
---
fn __main__() {
  (1/*:int*/) + (1/*:int*/);
  (1.5/*:num*/) + (1.5/*:num*/);
  ("\"a\""/*:str*/) + ("\"b\""/*:str*/);
  (1/*:int*/) < (1/*:int*/);
  (1.5/*:num*/) < (1.5/*:num*/);
  ("\"a\""/*:str*/) < ("\"b\""/*:str*/);
  (1/*:int*/) > (1/*:int*/);
  (1.5/*:num*/) > (1.5/*:num*/);
  ("\"a\""/*:str*/) > ("\"b\""/*:str*/);
  (1/*:int*/) <= (1/*:int*/);
  (1.5/*:num*/) <= (1.5/*:num*/);
  ("\"a\""/*:str*/) <= ("\"b\""/*:str*/);
  (1/*:int*/) >= (1/*:int*/);
  (1.5/*:num*/) >= (1.5/*:num*/);
  ("\"a\""/*:str*/) >= ("\"b\""/*:str*/);
  (1/*:int*/) + (1/*:int*/);
  (1.5/*:num*/) + (1.5/*:num*/);
  (1/*:int*/) - (1/*:int*/);
  (1.5/*:num*/) - (1.5/*:num*/);
  (1/*:int*/) * (1/*:int*/);
  (1.5/*:num*/) * (1.5/*:num*/);
  (1/*:int*/) / (1/*:int*/);
  (1.5/*:num*/) / (1.5/*:num*/);
  (1/*:int*/) % (1/*:int*/);
  (1.5/*:num*/) % (1.5/*:num*/);
  (1/*:int*/) ** (1/*:int*/);
  (1.5/*:num*/) ** (1.5/*:num*/);
  (true/*:bool*/) && (true/*:bool*/);
  (false/*:bool*/) && (false/*:bool*/);
  (true/*:bool*/) || (true/*:bool*/);
  (false/*:bool*/) || (false/*:bool*/);
  (1/*:int*/) == (1/*:int*/);
  (1.5/*:num*/) == (1.5/*:num*/);
  ("\"a\""/*:str*/) == ("\"b\""/*:str*/);
  (true/*:bool*/) == (true/*:bool*/);
  (false/*:bool*/) == (false/*:bool*/);
  ([]/*:['1]*/) == ([]/*:['1]*/);
  (none/*:'3?*/) == (none/*:'3?*/);
  (1/*:int*/) != (1/*:int*/);
  (1.5/*:num*/) != (1.5/*:num*/);
  ("\"a\""/*:str*/) != ("\"b\""/*:str*/);
  (true/*:bool*/) != (true/*:bool*/);
  (false/*:bool*/) != (false/*:bool*/);
  ([]/*:['5]*/) != ([]/*:['5]*/);
  (none/*:'7?*/) != (none/*:'7?*/);
}
