src/ty/snapshots/tvm__ty__tests__empty_type.snap
---
source: src/ty/tests.rs
expression: "check!(r#\"\n        type T;\n    \"#)"
---
Block {
    body: [],
    tail: None,
}

type T()

[
    Fn {
        name: Ident("T"),
        kind: Cons,
        sig: FnSig {
            params: [],
            ret: Def(
                DefId(
                    4,
                ),
            ),
            ret_span: None,
        },
        body: Extern,
    },
]

