src/ty/snapshots/tvm__ty__tests__if_stmt.snap
---
source: src/ty/tests.rs
expression: "check!(r#\"\n    let v: int = if true {\n      0\n    } else {\n      1\n    };\n  \"#)"
---
/*
types:
  unknown
  none
  int
  num
  bool
  str
*/
fn __main__() -> none {
  /*inferred: int*/
  let v: int = if (true/*:bool*/) {
    0
  } else {
    1
  };
}
