src/ty/snapshots/tvm__ty__tests__let_stmt.snap
---
source: src/ty/tests.rs
expression: "check!(r#\"\n    let v: int = 0;\n  \"#)"
---
/*
types:
  unknown
  none
  int
  num
  bool
  str
*/
fn __main__() -> none {
  /*inferred: int*/
  let v: int = 0;
}
