src/ty/snapshots/tvm__ty__tests__literal_array_empty.snap
---
source: src/ty/tests.rs
expression: "check!(r#\"\n    let v = [];\n  \"#)"
---
let v = []/*['0]*/;

