src/ty/snapshots/tvm__ty__tests__literal_array_len.snap
---
source: src/ty/tests.rs
expression: "check!(r#\"\n    let v = [0; 16];\n  \"#)"
---
let v = [0/*int*/;16/*int*/]/*[int]*/;

