src/ty/snapshots/tvm__ty__tests__literal_array_single_item.snap
---
source: src/ty/tests.rs
expression: "check!(r#\"\n    let v = [0];\n  \"#)"
---
fn __main__() {
  let v: [int] = [(0/*:int*/)];
}
