src/ty/snapshots/tvm__ty__tests__literal_bool.snap
---
source: src/ty/tests.rs
expression: "check!(r#\"\n    let a = true;\n    let b = false;\n  \"#)"
---
let a = true/*bool*/;
let b = false/*bool*/;

