src/ty/snapshots/tvm__ty__tests__literal_int.snap
---
source: src/ty/tests.rs
expression: "check!(r#\"\n    let v = 10;\n  \"#)"
---
let v = 10/*int*/;

